[Zebra] Vertically align sidebar menus
Removes padding from the top and bottom of the
.mw-body element so that the border of the sidebar
menus align with border of the tab area.

Also removes the bottom margin on the sidebar menus
so that the bottom of the menus align with the bottom
of the content. (This was an artifact from the gray
background design).

**Visual Changes**
- The content will move up by 8px with this change.
- The bottom of the TOC will also move down by 24px
  to align with the content.

Bug: T351432
Change-Id: If0a8189b228ffb6fb63dfd8be40955653caa0b34

--- a/resources/skins.vector.zebra.styles/layouts/grid.less
+++ b/resources/skins.vector.zebra.styles/layouts/grid.less
@@ -37,12 +37,12 @@
 
 	// Align the sidebar menus with the bottom-border of the
 	// toolbar (below the page title) by pushing down the sidebar content
-	// by the hieght of the page title (font-size+padding) + 1px border.
-	// NOTE: This alignment happens to work (when the title is on a single line)
-	// but could be broken by line-height.
+	// by the hieght of the page title.
+	// NOTE: This alignment happens to work when the title is on a single line
+	// but can be affected by H1 line-height.
 	.vector-column-start,
 	.vector-column-end {
-		margin-top: ~'calc(@{font-size-heading-1} + @{margin-top-pre-content})';
+		margin-top: @font-size-heading-1;
 		border-top: 1px solid transparent;
 	}
 }
