[Zebra] Align sidebar TOC with main menu
Aligns the text of the sidebar TOC with the
main menu using negative margins. This only
affects the TOC in the sidebar position.

Bug: T351697
Change-Id: Ie4e78379e8682636ebf72913e995b69e922b4983

--- a/resources/skins.vector.zebra.styles/layouts/toc/pinned.less
+++ b/resources/skins.vector.zebra.styles/layouts/toc/pinned.less
@@ -1,3 +1,8 @@
+.mw-table-of-contents-container.vector-sticky-pinned-container {
+	// Aligns the text of the sidebar TOC with the main menu.
+	margin-left: -@toc-list-item-padding-start;
+}
+
 .mw-table-of-contents-container {
 	// Needed for Grid-based layout
 	align-self: start;
