Make client prefs fully pinnable
Bug: T351141
Change-Id: Ic4a166fb3234b27dbf3d37891abfdf15781c8867

--- a/includes/templates/ClientPreferences.mustache
+++ b/includes/templates/ClientPreferences.mustache
@@ -1,4 +1,2 @@
-<div class="vector-client-preferences vector-pinnable-element">
-    <div class="vector-pinnable-header"><span class="vector-pinnable-header-label">{{msg-vector-client-preferences}}</span></div>
-    <div id="vector-client-prefs" class="vector-pinnable-element"></div>
-</div>
+{{>PinnableElement/Open}}
+{{>PinnableElement/Close}}
