--- a/resources/skins.vector.clientPreferences/clientPreferences.less
+++ b/resources/skins.vector.clientPreferences/clientPreferences.less
@@ -1,12 +1,6 @@
 #vector-client-prefs {
 	form {
 		font-size: 0.875rem;
-		padding: 6px 14px;
-	}
-
-	&-sidebar-container {
-		@media ( max-width: 999px ) {
-			display: none;
-		}
+		padding: 6px 0;
 	}
 }
