--- a/resources/skins.vector.styles/components/PinnableElement.less
+++ b/resources/skins.vector.styles/components/PinnableElement.less
@@ -8,3 +8,9 @@
 		padding-right: 0;
 	}
 }
+
+.vector-sticky-pinned-container {
+	// Applies styles for making a pinned element sticky
+	position: sticky;
+	top: @grid-row-gap;
+}
