--- a/resources/skins.vector.styles/skin.less
+++ b/resources/skins.vector.styles/skin.less
@@ -32,6 +32,7 @@
 
 	// Components
 	@import './components/Button.less';
+	@import './components/ClientPreferences.less';
 	@import './components/LanguageDropdown.less';
 	@import './components/UserLinks.less';
 	@import './components/Header.less';
