--- a/resources/skins.vector.zebra.styles/layouts/grid.less
+++ b/resources/skins.vector.zebra.styles/layouts/grid.less
@@ -31,7 +31,8 @@
 		grid-area: footer;
 	}
 
-	&.vector-feature-page-tools-pinned-enabled .vector-column-end {
+	&.vector-feature-page-tools-pinned-enabled .vector-column-end,
+	&.vector-feature-client-prefs-pinned-enabled .vector-column-end {
 		width: @width-column-desktop;
 	}
 
@@ -67,7 +68,8 @@
 		}
 	}
 
-	&.vector-feature-page-tools-pinned-enabled .vector-column-end {
+	&.vector-feature-page-tools-pinned-enabled .vector-column-end,
+	&.vector-feature-client-prefs-pinned-enabled .vector-column-end {
 		width: @width-column-desktop-wide;
 	}
 }
@@ -123,7 +125,8 @@
 		}
 	}
 
-	&.vector-feature-page-tools-pinned-enabled .mw-body {
+	&.vector-feature-page-tools-pinned-enabled .mw-body,
+	&.vector-feature-client-prefs-pinned-enabled .mw-body {
 		column-gap: @grid-column-gap;
 	}
 
