Fix the toc header underline
Bug: T340481
Change-Id: Iefbaae291c091b51910180c619993843895c9a20

--- a/resources/skins.vector.zebra.styles/components/TableOfContents.less
+++ b/resources/skins.vector.zebra.styles/components/TableOfContents.less
@@ -1,6 +1,6 @@
 .vector-toc {
 	.vector-pinnable-header {
-		padding-left: @toc-list-item-padding-start;
+		margin-left: @toc-list-item-padding-start;
 	}
 
 	.vector-toc-numb {
