[Zebra] Make .vector-column-start cache compatible
preparing html and css to avoid caching issues
caused by differences between zebra and non-zebra HTML.

Bug: T347712
Bug: T351830
Change-Id: I6f8ae635ba38937729b77ea8517ef2eae0ae12f7

--- a/includes/templates/ColumnStart.mustache
+++ b/includes/templates/ColumnStart.mustache
@@ -1,4 +1,4 @@
-{{#is-zebra-enabled}}<div class="vector-column-start">{{/is-zebra-enabled}}
+<div class="vector-column-start">
 	{{>MainMenuPinned}}
 	{{#data-toc}}
 	<div class="vector-sticky-pinned-container">
@@ -14,4 +14,4 @@
 		</nav>
 	</div>
 	{{/data-toc}}
-{{#is-zebra-enabled}}</div>{{/is-zebra-enabled}}
+</div>
