--- a/resources/skins.vector.styles/layouts/grid.less
+++ b/resources/skins.vector.styles/layouts/grid.less
@@ -19,13 +19,13 @@
 		grid-area: siteNotice;
 	}
 
-	.mw-table-of-contents-container {
-		grid-area: toc;
+	.vector-main-menu-container {
+		grid-area: mainMenu;
 		overflow-anchor: none; // T330108
 	}
 
-	.vector-main-menu-container {
-		grid-area: mainMenu;
+	.vector-column-start {
+		grid-area: toc;
 		overflow-anchor: none; // T330108
 	}
 
