Fix sticky styles for pinnable elements by moving sticky styles into separate vector-sticky-pinned-container element
Cached HTML change

Bug: T351141
Change-Id: I7d2b4417db15aad7ea788ac7adf131de2c702d27

--- a/resources/skins.vector.styles/components/StickyHeader.less
+++ b/resources/skins.vector.styles/components/StickyHeader.less
@@ -156,8 +156,7 @@
 			top: @height-header !important;
 		}
 
-		#vector-toc-pinned-container .vector-toc,
-		#vector-page-tools-pinned-container .vector-page-tools {
+		.vector-sticky-pinned-container {
 			max-height: ~'calc( 100vh - @{height-header} - @{max-height-bottom-spacing-scroll-indicator} )';
 		}
 	}
