--- a/resources/skins.vector.styles/components/TableOfContents.less
+++ b/resources/skins.vector.styles/components/TableOfContents.less
@@ -134,7 +134,7 @@
 &.vector-feature-toc-pinned-clientpref-0 body:not( .vector-sticky-header-visible ) .vector-page-titlebar,
 &.vector-feature-toc-pinned-clientpref-0 .vector-sticky-header-visible .vector-sticky-header-context-bar,
 &.vector-feature-toc-pinned-clientpref-1 .mw-page-container-inner {
-	> .vector-toc-landmark {
+	.vector-toc-landmark {
 		display: block;
 	}
 }
