--- a/resources/skins.vector.zebra.styles/mixins.less
+++ b/resources/skins.vector.zebra.styles/mixins.less
@@ -64,6 +64,7 @@
 }
 
 .mixin-vector-scrollable-with-fade() {
+	overflow-x: hidden;
 	overflow-y: auto;
 
 	&::after {
@@ -73,11 +74,7 @@
 		bottom: 0;
 		left: 0;
 		right: 0;
-		width: ~'calc( 100% + @{padding-vertical-dropdown-menu} )';
 		height: @padding-vertical-dropdown-menu;
-		margin-top: -@padding-vertical-dropdown-menu;
-		margin-left: -@padding-vertical-dropdown-menu;
-		transform: translate( 0, @padding-vertical-dropdown-menu );
 		background: linear-gradient( rgba( 255, 255, 255, 0 ), @background-color-page-container );
 		background-repeat: no-repeat;
 		pointer-events: none; // Make the link below the fade clickable
