Update theme icon for client preferences in user links
- Add appearance.svg file and classes
- Update the icon name in php
- Update icon name in test data and Snapshot

To test: change return value of
  isClientPreferencesPinned() from SkinVector22
  PHP Class to false

Bug: T351142
Change-Id: If61f3019430be3cb9c926b09bc397e27d8e636f2

--- a/resources/skins.vector.styles/mixins.less
+++ b/resources/skins.vector.styles/mixins.less
@@ -98,3 +98,7 @@
 	left: auto !important; /* stylelint-disable-line declaration-no-important */
 	right: 0;
 }
+
+.vector-icon.mw-ui-icon-wikimedia-appearance {
+	background-image: url( ./images/appearance.svg );
+}
