Implement new font-sizes for custom front-size preference
Adds different font-sizes and line-heights for the custom
font-size UI. The custom font-size preference options are now:

1. Compact - 14px font-size & 22px line-height
2. Standard - 16px font-size & 24px line-height
3. Open - 20px font-size & 26px line-height

This removes the "xl" font-size option
(`vector-feature-custom-font-size-3`) and it's related i18n messages,
and changes the remaining message to match the new options.

The default font-size, when the custom font-size feature is disabled,
is "compact".

Bug: T351693
Change-Id: I5975a78ce7327f314fd55de55c222ac08d801fbd

--- a/resources/skins.vector.styles/CSSCustomProperties.less
+++ b/resources/skins.vector.styles/CSSCustomProperties.less
@@ -15,18 +15,15 @@
 
 :root {
 	--font-size-medium: unit( @font-size-small, rem );
+	--line-height-medium: @line-height-small;
 }
 
-// FIXME: Migrate `enabled` to `1`.
-.vector-feature-custom-font-size-clientpref-enabled,
 .vector-feature-custom-font-size-clientpref-1 {
 	--font-size-medium: unit( @font-size-medium, rem );
+	--line-height-medium: 1.5;
 }
 
 .vector-feature-custom-font-size-clientpref-2 {
 	--font-size-medium: unit( @font-size-large, rem );
-}
-
-.vector-feature-custom-font-size-clientpref-3 {
-	--font-size-medium: unit( @font-size-x-large, rem );
+	--line-height-medium: 1.3;
 }
