--- a/resources/skins.vector.styles/typography.less
+++ b/resources/skins.vector.styles/typography.less
@@ -82,7 +82,7 @@ pre,
 
 .vector-body {
 	font-size: var( --font-size-medium );
-	line-height: @line-height-base;
+	line-height: var( --line-height-medium );
 
 	#siteSub {
 		font-size: unit( @font-size-small, rem ); // T311421
