Increase "large" font-size option for client-preferences
Increases "large" font-size option from
@font-size-large (18px equivalent) to
@font-size-x-large (20px equivalent)

Bug: T351693
Change-Id: I9e3dd8346b1d6f6a9efd04bb1e43fee9bfd79154

--- a/resources/skins.vector.styles/CSSCustomProperties.less
+++ b/resources/skins.vector.styles/CSSCustomProperties.less
@@ -24,6 +24,6 @@
 }
 
 .vector-feature-custom-font-size-clientpref-2 {
-	--font-size-medium: unit( @font-size-large, rem );
+	--font-size-medium: unit( @font-size-x-large, rem );
 	--line-height-medium: 1.3;
 }
