[Zebra] Update to 483c6bb Align sidebar TOC with main menu
- Vertically aligns the sidebar TOC
and main-menu text, update after sticky-pinned
container was split into separate elements.
- Consolidate position: sticky and contain: paint styles onto sticky-pinned-container elements

47 expectecd visual changes to desktop-dev

Bug: T351697
Change-Id: I76b3e875f5793d3442e84215447a0ab9fa818300

--- a/resources/skins.vector.zebra.styles/components/PinnableElement.less
+++ b/resources/skins.vector.zebra.styles/components/PinnableElement.less
@@ -24,6 +24,9 @@
 	// Applies styles for making a pinned element sticky
 	position: sticky;
 	top: @grid-row-gap;
+	// Support: Chrome
+	// Work around sticky-positioned layers disabling subpixel text rendering (T327460).
+	contain: paint;
 	// Border-box changes the height calculation.
 	box-sizing: border-box;
 	// Height is viewport height - row gap above and below the container.
