--- a/resources/skins.vector.zebra.styles/layouts/toc/pinned.less
+++ b/resources/skins.vector.zebra.styles/layouts/toc/pinned.less
@@ -1,19 +1,8 @@
-.mw-table-of-contents-container.vector-sticky-pinned-container {
+.vector-column-start .vector-sticky-pinned-container {
 	// Aligns the text of the sidebar TOC with the main menu.
-	margin-left: -@toc-list-item-padding-start;
-}
-
-.mw-table-of-contents-container {
-	// Needed for Grid-based layout
-	align-self: start;
-}
-
-&.vector-feature-toc-pinned-clientpref-1 #mw-panel-toc {
-	// Support: Chrome
-	// Work around sticky-positioned layers disabling subpixel text rendering (T327460).
-	// NOTE: This property has an effect similar to 'overflow: hidden', and will prevent elements
+	// The negative margins must be applied here, because .vector-sticky-pinned-container has
+	// contain: paint, which has an effect similar to 'overflow: hidden', and will prevent elements
 	// inside of the panel from being rendered outside of its bounding box, even when they would
 	// be positioned there using absolute positioning, negative margin, transforms, etc.
-	// That's why the negative margins have to be applied here, instead of on #vector-toc.
-	contain: paint;
+	margin-left: -@toc-list-item-padding-start;
 }
