Fix nonzebra sticky container scrolling behavior and scrollable indicator
- Remove unnecessary CSS from old grid styles
- Consolidate scrollable indicator styles, delete old styles

Bug: T352464
Change-Id: Id33e6d99dba2c680f02b246bbccf26a2aa7e77d9

--- a/resources/skins.vector.styles/components/PinnableElement.less
+++ b/resources/skins.vector.styles/components/PinnableElement.less
@@ -10,7 +10,15 @@
 }
 
 .vector-sticky-pinned-container {
+	// Add fade indicator.
+	.mixin-vector-scrollable-with-fade();
 	// Applies styles for making a pinned element sticky
 	position: sticky;
-	top: @grid-row-gap;
+	top: 0;
+	// Support: Chrome
+	// Work around sticky-positioned layers disabling subpixel text rendering (T327460).
+	contain: paint;
+	// Border-box changes the height calculation.
+	box-sizing: border-box;
+	max-height: ~'calc( 100vh - @{max-height-bottom-spacing-scroll-indicator} )';
 }
