Fix scrolling behavior in dropdowns
Bug: T352930
Change-Id: I894b91b5faaf86b1c0acaed35bd39756126711f2

--- a/resources/skins.vector.zebra.styles/components/Dropdown.less
+++ b/resources/skins.vector.zebra.styles/components/Dropdown.less
@@ -45,7 +45,8 @@
 		opacity: 0;
 		height: 0;
 		visibility: hidden;
-		overflow: hidden;
+		overflow-x: hidden;
+		overflow-y: auto;
 		z-index: @z-index-dropdown;
 		.mixin-vector-dropdown-menu();
 		max-height: 75vh;
