--- a/resources/skins.vector.styles/layouts/toc/pinned.less
+++ b/resources/skins.vector.styles/layouts/toc/pinned.less
@@ -1,29 +1,8 @@
-@import '../../variables.less';
-@import '../../mixins.less';
-
-@media ( min-width: @min-width-breakpoint-desktop ) {
-	.vector-column-start .vector-sticky-pinned-container {
-		// Align the left edge of the TOC text with the page container
-		margin-left: -@spacing-subsection-toggle;
-	}
-
-	&.vector-feature-toc-pinned-clientpref-1 #vector-toc-pinned-container {
-		// Default spacing separating the sidebar TOC from the main menu.
-		margin-top: 1.5em;
-	}
-
-	// FIXME: Remove vector-feature-toc-pinned-(enabled|disabled) when cache allows.
-	&.vector-feature-main-menu-pinned-disabled.vector-feature-toc-pinned-clientpref-1 #vector-toc-pinned-container,
-	&.vector-feature-main-menu-pinned-disabled.vector-feature-toc-pinned-enabled #vector-toc-pinned-container {
-		// Align TOC with bottom of title when main menu is not pinned but the TOC is
-		margin-top: @margin-top-pinned-toc;
-	}
-
-	// T302076: Add fade scrollable indicator when TOC is in sidebar
-	// Avoid showing indicator when the TOC is floating, or collapsed in the page title/sticky header
-	#vector-toc-pinned-container .vector-toc {
-		padding-top: @padding-top-pinned-element;
-		padding-left: @spacing-subsection-toggle;
-		padding-right: @padding-horizontal-dropdown-menu-item;
-	}
+.vector-column-start .vector-sticky-pinned-container {
+	// Aligns the text of the sidebar TOC with the main menu.
+	// The negative margins must be applied here, because .vector-sticky-pinned-container has
+	// contain: paint, which has an effect similar to 'overflow: hidden', and will prevent elements
+	// inside of the panel from being rendered outside of its bounding box, even when they would
+	// be positioned there using absolute positioning, negative margin, transforms, etc.
+	margin-left: -@toc-list-item-padding-start;
 }
