--- a/resources/skins.vector.styles/components/ClientPreferences.less
+++ b/resources/skins.vector.styles/components/ClientPreferences.less
@@ -1,6 +1,6 @@
 // Ensure there is only 1 client prefs landmark at anytime
-&.vector-feature-client-prefs-pinned-enabled .vector-user-links .vector-client-prefs-landmark,
-&.vector-feature-client-prefs-pinned-disabled .vector-column-end .vector-client-prefs-landmark {
+.vector-feature-client-prefs-pinned-enabled .vector-user-links .vector-client-prefs-landmark,
+.vector-feature-client-prefs-pinned-disabled .vector-column-end .vector-client-prefs-landmark {
 	display: none;
 }
 
