--- a/resources/skins.vector.styles/components/PinnableElement.less
+++ b/resources/skins.vector.styles/components/PinnableElement.less
@@ -1,24 +1,46 @@
-.vector-pinned-container .vector-pinnable-element {
-	// Make the heading border line up with the edge of the text
-	// (Whereas in a dropdown, the border lines up with the edge of the dropdown container).
-	.vector-pinnable-header,
-	.vector-menu-heading,
-	.mw-list-item a {
-		padding-left: 0;
-		padding-right: 0;
+/**
+ * PinnableElement
+ * Pinned containers are typically dropdown menus that have been
+ * placed in a sidebar column, e.g. page tools menu, main menu.
+ */
+
+.vector-pinnable-element {
+	font-size: @font-size-dropdown;
+}
+
+.vector-pinned-container {
+	.mixin-vector-content-box();
+	padding: @padding-vertical-dropdown-menu @padding-horizontal-dropdown-menu;
+	display: none;
+
+	// If there is no display grid support we remove pinnable elements
+	@supports ( display: grid ) {
+		display: block;
 	}
 }
 
 .vector-sticky-pinned-container {
-	// Add fade indicator.
 	.mixin-vector-scrollable-with-fade();
 	// Applies styles for making a pinned element sticky
 	position: sticky;
-	top: 0;
+	top: @grid-row-gap;
 	// Support: Chrome
 	// Work around sticky-positioned layers disabling subpixel text rendering (T327460).
 	contain: paint;
 	// Border-box changes the height calculation.
 	box-sizing: border-box;
-	max-height: ~'calc( 100vh - @{max-height-bottom-spacing-scroll-indicator} )';
+	// Height is viewport height - row gap above and below the container.
+	max-height: ~'calc( 100vh - (@{grid-row-gap} * 2) )';
+}
+
+@media ( max-width: @max-width-breakpoint-tablet ) {
+	/**
+ 	 * At lower resolutions, we want to hide the pinned containers when JS is enabled since these
+ 	 * elements collapse (become unpinned) at this resolution via PinnableElement.js.
+ 	 * Although this is handled in JS, this rule prevents the pinned menu from
+ 	 * appearing on pageload, at low resolutions, before the JS kicks in.
+ 	 */
+	&.client-js .vector-pinned-container {
+		display: none;
+	}
 }
