[Zebra] Remove !important
- Complying to fix me comment

Bug: T347712
Change-Id: Iacd0065b5a736249046ba89bb618bb13f7c0250a

--- a/resources/skins.vector.styles/mixins.less
+++ b/resources/skins.vector.styles/mixins.less
@@ -82,8 +82,6 @@
 }
 
 .mixin-vector-dropdown-content-flip() {
-	// Flip dropdown horizontal alignment
-	// FIXME: !important necessary for flipping user links dropdown, remove after VectorZebraDesign is default
-	left: auto !important; /* stylelint-disable-line declaration-no-important */
+	left: auto;
 	right: 0;
 }
