Simplify heading styles. Avoid using .vector-body
Bug: T352875
Change-Id: Iba444d2324aeb578fa739cb12f1b31fb630c9ec7

--- a/resources/skins.vector.styles/components/PinnableHeader.less
+++ b/resources/skins.vector.styles/components/PinnableHeader.less
@@ -11,7 +11,8 @@
 	display: inline-block;
 	vertical-align: middle;
 	font-size: @font-size-dropdown;
-	margin: 0 @size-50 0 0;
+	// Override h2 styles in the case of the TOC
+	margin: 0 @size-50 0 0 !important; /* stylelint-disable-line declaration-no-important */
 	padding: 0;
 	border: 0;
 	font-weight: bold;
