--- a/resources/skins.vector.styles/components/TableOfContents.less
+++ b/resources/skins.vector.styles/components/TableOfContents.less
@@ -3,6 +3,10 @@
 		margin-left: @toc-list-item-padding-start;
 	}
 
+	.vector-pinnable-header-label {
+		font-size: @font-size-reset; // Update font-size because the label is an <h2>
+	}
+
 	.vector-toc-numb {
 		display: none;
 	}
