--- a/resources/skins.vector.styles/components/Button.less
+++ b/resources/skins.vector.styles/components/Button.less
@@ -16,11 +16,14 @@
 #vector-page-titlebar-toc-label,
 .vector-header .cdx-button.cdx-button--icon-only {
 	// Increase padding on small viewports
-	// FIXME: Replace with Codex solution i.e. `.cdx-button--size-large`
+	// FIXME: T338163 Replace with Codex solution i.e. `.cdx-button--size-large`
 	@media ( max-width: @max-width-breakpoint-tablet ) {
 		@min-size-interactive-touch: 44px;
-		min-width: @min-size-interactive-touch;
 		min-height: @min-size-interactive-touch;
+		// FIXME: This results in inconsistencies with icon-only buttons with a dropdown arrow
+		// (i.e. user dropdown toggle), because those buttons should have a larger width than
+		// @min-size-interactive-touch. Instead of min-width we should be increasing the horizontal padding
+		min-width: @min-size-interactive-touch;
 	}
 }
 
