--- a/resources/skins.vector.styles/components/PageTitlebar.less
+++ b/resources/skins.vector.styles/components/PageTitlebar.less
@@ -38,6 +38,8 @@
 	// The language button sometimes appears as an icon only button, in which
 	// case we need to flush differently. See an empty user page for an example of
 	// where this is used.
+	// FIXME: This should be scoped to on desktop viewports only
+	// Currently the icon only language button is misaligned on smaller viewports
 	> .mw-portlet-lang-icon-only:last-child {
 		.cdx-mixin-button-layout-flush( 'end', true );
 	}
