Truncate long usernames with an ellipsis
Bug: T356349
Change-Id: I386a8f2165cb29e06e1752050bbd595eae134492

--- a/resources/skins.vector.styles/components/UserLinks.less
+++ b/resources/skins.vector.styles/components/UserLinks.less
@@ -98,9 +98,13 @@
 	}
 }
 
-//User-page link in personal (overflow) menu.
+/**
+ * User-page link in personal (overflow) menu.
+ */
 #pt-userpage-2 {
 	max-width: unit( 155 / @font-size-browser / @font-size-user-links, em );
+	overflow: hidden;
+	text-overflow: ellipsis;
 
 	a:not( .mw-selflink ) {
 		// T312157 Override redlink (.new) color for non-existant userpage
