Zebra selector clean up
Change-Id: I6a942913ae2fec066b97c1824a09bb07a8eeef45

--- a/resources/skins.vector.styles/components/MainMenu.less
+++ b/resources/skins.vector.styles/components/MainMenu.less
@@ -1,6 +1,6 @@
 // Ensure there is only 1 main menu landmark at anytime
-&.vector-feature-main-menu-pinned-enabled .vector-header-start .vector-main-menu-landmark,
-&.vector-feature-main-menu-pinned-disabled .vector-main-menu-container .vector-main-menu-landmark {
+.vector-feature-main-menu-pinned-enabled .vector-header-start .vector-main-menu-landmark,
+.vector-feature-main-menu-pinned-disabled .vector-main-menu-container .vector-main-menu-landmark {
 	display: none;
 }
 
