--- a/resources/skins.vector.styles/components/PageTools.less
+++ b/resources/skins.vector.styles/components/PageTools.less
@@ -1,6 +1,6 @@
 // Ensure there is only 1 page tools landmark at anytime
-&.vector-feature-page-tools-pinned-enabled .vector-page-toolbar-container .vector-page-tools-landmark,
-&.vector-feature-page-tools-pinned-disabled .vector-column-end .vector-page-tools-landmark {
+.vector-feature-page-tools-pinned-enabled .vector-page-toolbar-container .vector-page-tools-landmark,
+.vector-feature-page-tools-pinned-disabled .vector-column-end .vector-page-tools-landmark {
 	display: none;
 }
 
