--- a/resources/skins.vector.styles/components/PinnableElement.less
+++ b/resources/skins.vector.styles/components/PinnableElement.less
@@ -40,7 +40,7 @@
  	 * Although this is handled in JS, this rule prevents the pinned menu from
  	 * appearing on pageload, at low resolutions, before the JS kicks in.
  	 */
-	&.client-js .vector-pinned-container {
+	.client-js .vector-pinned-container {
 		display: none;
 	}
 }
