--- a/resources/skins.vector.styles/layouts/toc/unpinned.less
+++ b/resources/skins.vector.styles/layouts/toc/unpinned.less
@@ -26,7 +26,7 @@
 	z-index: @z-index-dropdown;
 }
 
-&.client-js {
+.client-js {
 	@media ( max-width: @max-width-breakpoint-tablet ) {
 		//
 		// TOC in page titlebar on narrow screens
@@ -73,7 +73,7 @@
 	}
 }
 
-&.client-nojs {
+.client-nojs {
 	//
 	// No-JS TOC in page titlebar
 	//
