--- a/resources/skins.vector.styles/components/PinnableHeader.less
+++ b/resources/skins.vector.styles/components/PinnableHeader.less
@@ -37,7 +37,7 @@
 
 // Pinnable behavior is only enabled when JS is enabled and on larger viewports
 @media ( min-width: @min-width-breakpoint-desktop ) {
-	&.client-js {
+	.client-js {
 		.vector-pinnable-header-unpinned .vector-pinnable-header-pin-button,
 		.vector-pinnable-header-pinned .vector-pinnable-header-unpin-button {
 			display: inline-block;
