--- a/resources/skins.vector.styles/components/StickyHeader.less
+++ b/resources/skins.vector.styles/components/StickyHeader.less
@@ -118,7 +118,7 @@
 
 // T298836 Sticky header is only shown at higher resolutions
 @media ( min-width: @min-width-breakpoint-desktop ) {
-	&.client-js.vector-sticky-header-enabled {
+	.client-js.vector-sticky-header-enabled {
 		// T290518: When the sticky header is enabled (feature flag is on, js is
 		// enabled, and viewport is at higher resolutions), add scroll padding to the
 		// root element. This is needed so that the sticky header does not overlap the
