--- a/resources/skins.vector.styles/layouts/screen.less
+++ b/resources/skins.vector.styles/layouts/screen.less
@@ -5,7 +5,7 @@
  * The rules here should only define the layout, not color or typography.
  */
 
-&html {
+html {
 	scroll-padding-top: @scroll-padding-top;
 }
 
@@ -147,9 +147,9 @@ body {
 	.mixin-vector-page-container-sizing();
 }
 
-&.vector-feature-limited-width-clientpref-0 .mw-page-container,
-&.vector-feature-limited-width-clientpref-0 .vector-sticky-header,
-&.vector-feature-limited-width-clientpref-0 .mw-header {
+.vector-feature-limited-width-clientpref-0 .mw-page-container,
+.vector-feature-limited-width-clientpref-0 .vector-sticky-header,
+.vector-feature-limited-width-clientpref-0 .mw-header {
 	max-width: none;
 }
 
