Provide a visual hint that night mode is being triggered in Vector
Working on feature flag not having this is causing confusion. This
will speed up development by allowing me to more easily determine what
mode I am in at all times.

Change-Id: I5d4168bbf7df41f4754b36c6e6aa4955dbc609bb

--- a/resources/skins.vector.styles/variables.less
+++ b/resources/skins.vector.styles/variables.less
@@ -59,7 +59,7 @@
 @padding-blockquote: 8px 32px;
 
 @background-color-secondary--modern: #f8f9fa;
-@background-color-page-container: @background-color-base;
+@background-color-page-container: var( --background-color-base );
 
 // Navigation
 @background-color-secondary: #f6f6f6;
