--- a/resources/skins.vector.styles/CSSCustomProperties.less
+++ b/resources/skins.vector.styles/CSSCustomProperties.less
@@ -16,6 +16,11 @@
 :root {
 	--font-size-medium: unit( @font-size-small, rem );
 	--line-height-medium: @line-height-small;
+	--background-color-base: @background-color-base;
+}
+
+.night-mode-palette() {
+	--background-color-base: #101418;
 }
 
 .vector-feature-custom-font-size-clientpref-1 {
@@ -26,4 +31,14 @@
 .vector-feature-custom-font-size-clientpref-2 {
 	--font-size-medium: unit( @font-size-x-large, rem );
 	--line-height-medium: 1.3;
+}
+
+html.skin-night-mode-clientpref-1 {
+	.night-mode-palette();
+}
+
+@media ( prefers-color-scheme: dark ) {
+	html.skin-night-mode-clientpref-2 {
+		.night-mode-palette();
+	}
 }
